--- a/index.html
+++ b/index.html
@@ -1,13 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+	<head>
+		<meta charset="UTF-8" />
+		<link rel="icon" type="image/svg+xml" href="/logo.svg" />
+		<link rel="stylesheet" href="/resource/loading.css" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>热爱光年</title>
+	</head>
+	<body>
+		<div id="root">
+			<div class="loading-container">
+				<div class="loading-spin__container">
+					<div class="loading-spin">
+						<div class="left-0 top-0 loading-spin-item"></div>
+						<div
+							class="left-0 bottom-0 loading-spin-item loading-delay-500"
+						></div>
+						<div
+							class="right-0 top-0 loading-spin-item loading-delay-1000"
+						></div>
+						<div
+							class="right-0 bottom-0 loading-spin-item loading-delay-1500"
+						></div>
+					</div>
+				</div>
+				<h2 class="loading-title">正在加载中，请耐心等待...</h2>
+			</div>
+			<script src="/resource/loading.js"></script>
+		</div>
+		<script type="module" src="/src/main.tsx"></script>
+	</body>
 </html>
