--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<link rel="stylesheet" href="/resource/loading.css" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>热爱光年</title>
+    <base href="/" />
 	</head>
 	<body>
 		<div id="root">
